It should be possible not to start Ludolph

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -45,5 +45,5 @@ ludolph_plugin_zabbix_http_authentication: False
 ludolph_plugin_zabbix_http_username: zabbix
 ludolph_plugin_zabbix_http_password: zabbix
 
-
+ludolph_service_enabled: True
 
