--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,4 +33,5 @@
 
 - name: Ensure Ludolph is running
   service: name=ludolph state=started enabled=yes
+  when: ludolph_service_enabled == True
   tags: ludolph
